[package]
name = "memcache-async-rs"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
futures-preview = {version = "=0.3.0-alpha.19", features = ["async-await"]}
error-chain = "0.12.1"
byteorder = "1.3.2"
log = "0.4.8"
rand = "0.7.2"
env_logger = "0.7.1"